--- a/contact.html
+++ b/contact.html
@@ -1,35 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact</title>
-    <link rel="stylesheet" type="text/css" href="styles/style.css">
+    <link rel="stylesheet" type="text/css" href="styles/style.css" />
     <script src="app.js" defer></script>
-</head>
+  </head>
 
-<body>
+  <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">home</a></li>
-                <li><a href="about.html">about</a></li>
-                <li><a href="services.html">playground</a></li>
-                <li><a href="#">contact</a></li>
-            </ul>
-        </nav>
+      <nav class="left-nav-ul">
+        <ul>
+          <li><a href="index.html">home</a></li>
+          <li><a href="about.html">about</a></li>
+          <li><a href="services.html">playground</a></li>
+          <li><a href="#">contact</a></li>
+        </ul>
+      </nav>
     </header>
 
-    <main>
+    <main id="main-content-container" class="flex-center">
+      <div id="contact-information" class="flex-center">
         <h3>Contact Me!</h3>
-
-        <div id="contact-information">
-            <div id="email-address">Email: <a href="mailto: mattburseth1@gmail.com">Matt Burseth</a></div>
-            <div id="phone-number">(224)-388-5554</div>
-            <div id="city-state">Chicago, IL</div>
-        </div>
+        <p>Email: <a href="mailto: mattburseth1@gmail.com">Matt Burseth</a></p>
+        <p>(224)-388-5554</p>
+        <p>Chicago, IL</p>
+      </div>
     </main>
-</body>
-
+  </body>
 </html>
