--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="info-div background-image-hallway">
       <header>
-        <nav>
+        <nav class="left-nav-ul">
           <ul class="menu-buttons">
             <li><a href="#">home</a></li>
             <li><a href="about.html">about me</a></li>
@@ -33,7 +33,7 @@
                 style="width: 50%"
               >
                 <img
-                  src="./styles/photo-of-me.jpg"
+                  src="./styles/images/photo-of-me.jpg"
                   alt="Photo of Matt"
                   style="
                     width: 187px;
