--- a/services.html
+++ b/services.html
@@ -11,7 +11,7 @@
 
   <body>
     <header>
-      <nav>
+      <nav class="left-nav-ul">
         <ul>
           <li><a href="index.html">home</a></li>
           <li><a href="about.html">about</a></li>
