--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <div class="three-quarters flex-center space-evenly">
             <div class="technologies-tab">
               <img
-                src="./styles/java-logo.png"
+                src="./styles/images/java-logo.png"
                 alt="Java logo"
                 style="width: 75px; height: 75px"
               />
@@ -77,8 +77,8 @@
             </div>
             <div class="technologies-tab">
               <img
-                src="./styles/node-js-logo.png"
-                alt="React logo"
+                src="./styles/images/node-js-logo.png"
+                alt="Node logo"
                 style="width: 75px; height: 75px"
               />
               <p>
@@ -88,7 +88,7 @@
             </div>
             <div class="technologies-tab">
               <img
-                src="./styles/react-logo.png"
+                src="./styles/images/react-logo.png"
                 alt="React logo"
                 style="width: 75px; height: 75px"
               />
