Big changes to frontend
playing around with new color palette, new layout, removed background images

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <div class="info-div background-image-hallway">
+    <div>
       <header>
         <nav class="left-nav-ul">
           <ul class="menu-buttons">
@@ -24,7 +24,7 @@
 
     <main>
       <div id="main-body-div">
-        <div class="info-div full-width reg-div flex-center" id="test-div">
+        <div class="info-div full-width reg-div" id="test-div">
           <div class="full-width reg-div flex-center" id="about-me-div">
             <div id="about-me-card" class="three-quarters flex-center">
               <div
