--- a/about.html
+++ b/about.html
@@ -23,11 +23,13 @@
     </header>
 
     <main>
+      <h1 style="text-align: center; margin-top: 5rem;">Under maintenance!!!</h1>
+
       <div id="first-about-me-div" class="reg-div full-width flex-center">
         <div id="about-me-intro" class="three-quarters flex-center">
           <h3 style="margin-bottom: 1rem;">Who I Am</h3>
           <p id="about-me-paragraph">
-            Hello! My name is Matt Burseth, and this is my first attempt at
+            My name is Matt Burseth, and this is my first attempt at
             creating a personal website completely from scratch. I am
             <span id="age"></span> years old and have just recently graduated
             from the University of Wisconsin-Whitewater. With this website, I
@@ -36,8 +38,6 @@
           </p>
         </div>
       </div>
-
-      <div id="about-me-images"></div>
     </main>
   </body>
 
