--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 style="width: 75px; height: 75px"
               />
               <p>
-                Personal website created with ReactJS using dynamic elements
+                Personal website created with React.js using dynamic elements
               </p>
             </div>
           </div>
