--- a/services.html
+++ b/services.html
@@ -20,13 +20,18 @@
         </ul>
       </nav>
     </header>
-
+      <h1 style="text-align: center; margin-top: 5rem;">Under maintenance!!!</h1>
     <main>
-      <h1>Login with Spotify to Enable API Usage</h1>
+      
+
+      <div>
+        <h1>Login with Spotify</h1>
       <p id="promptToken">Click the button below to log in to Spotify:</p>
       <button id="login-button" onclick="loginToSpotifyAccessCode()">
         Log in with Spotify
       </button>
+      </div>
+      
 
       <div class="spotify-stuff">
         <div id="tokenContainer">
