--- a/index.html
+++ b/index.html
@@ -62,6 +62,18 @@
           </div>
         </div>
 
+        <div class="full-width full-height info-div" id="projects-div">
+          <div class="project-display-div project-display-div-1">
+
+          </div>
+          <div class="project-display-div project-display-div-2">
+
+          </div>
+          <div class="project-display-div project-display-div-3">
+
+          </div>
+        </div>
+
         <div
           class="info-div full-width reg-div flex-center"
           id="technologies-div"
