--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     border-radius: 5px;
                   "
                 />
-                <p>(Me)</p>
+                <p style="margin-top: 0.75rem;">(Me)</p>
               </div>
 
               <div
@@ -51,12 +51,12 @@
                 style="width: 50%"
               >
                 <h2 style="margin-bottom: 2rem">Hi, I'm Matt!</h2>
-                <p>
+                <p style="margin-bottom: 1rem;">
                   Welcome to my web portfolio! This website was made entirely
                   from scratch using HTML/CSS, Javascript, NodeJS/Express and
                   PostgreSQL.
                 </p>
-                <a href="about.html" style="margin-top: 2rem">More about me</a>
+                <a href="about.html">More about me</a>
               </div>
             </div>
           </div>
