--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 
     <main>
       <div id="main-body-div">
+        <div class="blue-background-test-div">
+          
+        </div>
         <div class="info-div full-width reg-div" id="test-div">
           <div class="full-width reg-div flex-center" id="about-me-div">
             <div id="about-me-card" class="three-quarters flex-center">
@@ -67,6 +70,9 @@
           id="technologies-div"
         >
           <div class="three-quarters flex-center space-evenly">
+            <div class="red-background-test-div">
+          
+            </div>
             <div class="technologies-tab">
               <img
                 src="./styles/images/java-logo.png"
