--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <ul class="menu-buttons">
             <li><a href="#">home</a></li>
             <li><a href="about.html">about me</a></li>
-            <li><a href="services.html">playground</a></li>
+            <li><a href="playground.html">playground</a></li>
             <li><a href="contact.html">contact</a></li>
           </ul>
         </nav>
@@ -98,6 +98,23 @@
             </div>
           </div>
         </div>
+
+        <section class="info-div full-width flex" id="other-sites-div" style="position: relative; width: 50%; flex-direction: column; margin-top: 10rem">
+          <div class="half-div project-card" style="left: 0; position: absolute;">
+            <h1>
+              Space Website
+            </h1>
+
+            <a href="https://space-site-mattburseth.pages.dev/">Space Site</a>
+            <p style="margin-top: 1rem;">A dynamic, API driven website created with Next.js and TailwindCSS for displaying space facts/visualizing space data.</p>
+          </div>
+
+          <div class="half-div project-card" style="right: 0; position: absolute;">
+            <h1>
+              Coming soon...
+            </h1>
+          </div>
+        </section>
       </div>
     </main>
 
