--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Services</title>
+    <title>About Me</title>
     <link rel="stylesheet" type="text/css" href="styles/style.css" />
     <script src="app.js" defer></script>
   </head>
@@ -14,7 +14,7 @@
         <ul>
           <li><a href="index.html">home</a></li>
           <li><a href="#">about</a></li>
-          <li><a href="services.html">playground</a></li>
+          <li><a href="playground.html">playground</a></li>
           <li><a href="contact.html">contact</a></li>
         </ul>
 
