--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
         <ul>
           <li><a href="index.html">home</a></li>
           <li><a href="about.html">about</a></li>
-          <li><a href="services.html">playground</a></li>
+          <li><a href="playground.html">playground</a></li>
           <li><a href="#">contact</a></li>
         </ul>
       </nav>
