Slight design change
Fixed centering problems in css on main page for project cards and on contact page - the urge to switch to React is fierce, and will be acted upon in due time. Also, regular CSS coming from TailwindCSS is the equivalent of skipping stones on a pond with a smartphone in your pocket.

--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <script src="app.js" defer></script>
   </head>
 
-  <body>
+  <body class="flex-col">
     <header>
       <nav class="left-nav-ul">
         <ul>
@@ -20,11 +20,15 @@
       </nav>
     </header>
 
-    <main id="main-content-container" class="flex-center">
-      <div id="contact-information" class="flex-center">
-        <h3>Contact Me!</h3>
-        <p>Email: <a href="mailto: mattburseth1@gmail.com">Matt Burseth</a></p>
-        <p>Chicago, IL</p>
+    <main>
+      <div id="main-content-container">
+        <div id="contact-information">
+          <h3 style="margin-bottom: 1rem;">Contact Me!</h3>
+          <p>
+            Email: <a href="mailto: mattburseth1@gmail.com">Matt Burseth</a>
+          </p>
+          <p>Chicago, IL</p>
+        </div>
       </div>
     </main>
   </body>
