--- a/index.html
+++ b/index.html
@@ -93,14 +93,14 @@
                 style="width: 75px; height: 75px"
               />
               <p>
-                Personal website created with React.js using dynamic elements
+                Personal projects involve in-depth usage of Next.js routing/React.js code architecture
               </p>
             </div>
           </div>
         </div>
 
-        <section class="info-div full-width flex" id="other-sites-div" style="position: relative; width: 50%; flex-direction: column; margin-top: 10rem">
-          <div class="half-div project-card" style="left: 0; position: absolute;">
+        <section class="info-div full-width flex" id="other-sites-section">
+          <div class="half-div project-card" style="left: 0;">
             <h1>
               Space Website
             </h1>
@@ -109,7 +109,7 @@
             <p style="margin-top: 1rem;">A dynamic, API driven website created with Next.js and TailwindCSS for displaying space facts/visualizing space data.</p>
           </div>
 
-          <div class="half-div project-card" style="right: 0; position: absolute;">
+          <div class="half-div project-card" style="right: 0;">
             <h1>
               Coming soon...
             </h1>
