first tailwind implement

--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
       <div id="first-about-me-div" class="reg-div full-width flex-center">
         <div id="about-me-intro" class="three-quarters flex-center">
           <h3 style="margin-bottom: 1rem;">Who I Am</h3>
-          <p id="about-me-paragraph">
+          <p id="about-me-paragraph" class="text-red-500">
             My name is Matt Burseth, and this is my first attempt at
             creating a personal website completely from scratch. I am
             <span id="age"></span> years old and have just recently graduated
